View content type + some minor code improvements

--- a/layouts/threecol_25_50_25_stacked.css
+++ b/layouts/threecol_25_50_25_stacked.css
@@ -1,3 +1,5 @@
+/* $Id: threecol_25_50_25_stacked.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+
 .panel-3col-stacked { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
