--- a/layouts/threecol_33_34_33.css
+++ b/layouts/threecol_33_34_33.css
@@ -1,3 +1,5 @@
+/* $Id: threecol_33_34_33.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+
 .panel-3col-33 { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
