--- a/layouts/twocol.css
+++ b/layouts/twocol.css
@@ -1,3 +1,5 @@
+/* $Id: twocol.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+
 .panel-2col { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
