--- a/layouts/threecol_33_34_33_stacked.css
+++ b/layouts/threecol_33_34_33_stacked.css
@@ -1,3 +1,5 @@
+/* $Id: threecol_33_34_33_stacked.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+
 .panel-3col-33-stacked { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
