--- a/layouts/threecol_33_34_33.css
+++ b/layouts/threecol_33_34_33.css
@@ -1,8 +1,11 @@
-/* $Id: threecol_33_34_33.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+/* $Id: threecol_33_34_33.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
 
 .panel-3col-33 { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
+}
+.panel-3col-33 div div { 
+  margin: .5em;
 }
 .panel-3col-33 .panel-col-first { 
   float: left; 
