--- a/layouts/threecol_33_34_33_stacked.css
+++ b/layouts/threecol_33_34_33_stacked.css
@@ -1,8 +1,11 @@
-/* $Id: threecol_33_34_33_stacked.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+/* $Id: threecol_33_34_33_stacked.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
 
 .panel-3col-33-stacked { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
+}
+.panel-3col-33-stacked div div { 
+  margin: .5em;
 }
 .panel-3col-33-stacked .panel-col-top,
 .panel-3col-33-stacked .panel-col-bottom { 
