--- a/layouts/twocol.css
+++ b/layouts/twocol.css
@@ -1,9 +1,14 @@
-/* $Id: twocol.css,v 1.2 2006/07/22 21:59:01 merlinofchaos Exp $ */
+/* $Id: twocol.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
 
 .panel-2col { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
 }
+
+.panel-2col div div { 
+  margin: .5em;
+}
+
 .panel-2col .panel-col-first { 
   float: left; 
   width: 50%; 
