--- a/layouts/threecol_33_34_33.css
+++ b/layouts/threecol_33_34_33.css
@@ -1,4 +1,4 @@
-/* $Id: threecol_33_34_33.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
+/* $Id: threecol_33_34_33.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
 
 .panel-3col-33 { 
   /* border: 1px solid red; */ 
@@ -18,4 +18,7 @@
 .panel-3col-33 .panel-col-last { 
   float: left; 
   width: 33%; 
+}
+.panel-clearer {
+  clear: both;
 }
