--- a/layouts/twocol.css
+++ b/layouts/twocol.css
@@ -1,4 +1,4 @@
-/* $Id: twocol.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
+/* $Id: twocol.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
 
 .panel-2col { 
   /* border: 1px solid red; */ 
@@ -16,4 +16,7 @@
 .panel-2col .panel-col-last { 
   float: left; 
   width: 50%; 
+}
+.panel-clearer {
+  clear: both;
 }
