--- a/layouts/twocol_stacked.css
+++ b/layouts/twocol_stacked.css
@@ -1,4 +1,4 @@
-/* $Id: twocol_stacked.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
+/* $Id: twocol_stacked.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
 
 .panel-2col-stacked { 
   /* border: 1px solid red; */ 
@@ -21,4 +21,7 @@
 .panel-2col-stacked .panel-col-last { 
   float: left; 
   width: 50%; 
+}
+.panel-clearer {
+  clear: both;
 }
