--- a/layouts/threecol_25_50_25.css
+++ b/layouts/threecol_25_50_25.css
@@ -1,22 +1,40 @@
+// $Id: threecol_25_50_25.css,v 1.3.6.1 2007/05/22 22:08:01 merlinofchaos Exp $
+
 .panel-3col { 
-  /* border: 1px solid red; */ 
   overflow: hidden; 
 }
-.panel-3col div div { 
-  margin: .5em;
-}
+
 .panel-3col .panel-col-first { 
   float: left; 
   width: 25%; 
 }
+
+.panel-3col .panel-col-first .inside { 
+  margin: 0 .5em 1em 0;
+}
+
 .panel-3col .panel-col { 
   float: left; 
   width: 50%; 
 }
+
+.panel-3col .panel-col .inside { 
+  margin: 0 .5em 1em .5em;
+}
+
 .panel-3col .panel-col-last { 
   float: left; 
   width: 25%; 
 }
+
+.panel-3col .panel-col-last .inside { 
+  margin: 0 0 1em .5em;
+}
+
+.panel-3col .panel-separator {
+  margin: 0 0 1em 0;
+}
+
 .panel-clearer {
   clear: both;
 }
