--- a/layouts/threecol_25_50_25_stacked.css
+++ b/layouts/threecol_25_50_25_stacked.css
@@ -1,26 +1,50 @@
-/* $Id: threecol_25_50_25_stacked.css,v 1.3 2006/07/24 23:56:08 merlinofchaos Exp $ */
+/* $Id: threecol_25_50_25_stacked.css,v 1.3.6.1 2007/05/22 22:08:01 merlinofchaos Exp $ */
 
 .panel-3col-stacked { 
-  /* border: 1px solid red; */ 
   overflow: hidden; 
 }
-.panel-3col-stacked div div { 
-  margin: .5em;
-}
+
 .panel-3col-stacked .panel-col-top,
 .panel-3col-stacked .panel-col-bottom { 
   width: 100%; 
   clear: both;
 }
+
+.panel-3col-stacked .panel-col-top .inside {
+  margin-bottom: .5em;
+}
+
 .panel-3col-stacked .panel-col-first { 
   float: left; 
   width: 25%; 
 }
+
+.panel-3col-stacked .panel-col .inside { 
+  margin: 0 .5em 1em .5em;
+}
+
 .panel-3col-stacked .panel-col { 
   float: left; 
   width: 50%; 
 }
+
+.panel-3col-stacked .panel-col .inside { 
+  margin: 0 .5em 1em .5em;
+}
+
 .panel-3col-stacked .panel-col-last { 
   float: left; 
   width: 25%; 
+}
+
+.panel-3col-stacked .panel-col-last .inside { 
+  margin: 0 0 1em .5em;
+}
+
+.panel-3col-stacked .panel-separator {
+  margin: 0 0 1em 0;
+}
+
+.panel-clearer {
+  clear: both;
 }
