--- a/layouts/threecol_33_34_33.css
+++ b/layouts/threecol_33_34_33.css
@@ -1,24 +1,39 @@
-/* $Id: threecol_33_34_33.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
-
+// $Id: threecol_33_34_33.css,v 1.4.6.1 2007/05/22 22:08:01 merlinofchaos Exp $
 .panel-3col-33 { 
-  /* border: 1px solid red; */ 
   overflow: hidden; 
 }
-.panel-3col-33 div div { 
-  margin: .5em;
-}
+
 .panel-3col-33 .panel-col-first { 
   float: left; 
   width: 33%; 
 }
+
+.panel-3col-33 .panel-col-first .inside { 
+  margin: 0 .5em 1em 0;
+}
+
 .panel-3col-33 .panel-col { 
   float: left; 
   width: 34%; 
 }
+
+.panel-3col-33 .panel-col .inside { 
+  margin: 0 .5em 1em .5em;
+}
+
 .panel-3col-33 .panel-col-last { 
   float: left; 
   width: 33%; 
 }
+
+.panel-3col-33 .panel-col-last .inside { 
+  margin: 0 0 1em .5em;
+}
+
+.panel-3col-33 .panel-separator {
+  margin: 0 0 1em 0;
+}
+
 .panel-clearer {
   clear: both;
 }
