--- a/layouts/threecol_33_34_33_stacked.css
+++ b/layouts/threecol_33_34_33_stacked.css
@@ -1,29 +1,50 @@
-/* $Id: threecol_33_34_33_stacked.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
+/* $Id: threecol_33_34_33_stacked.css,v 1.4.6.1 2007/05/22 22:08:01 merlinofchaos Exp $ */
 
 .panel-3col-33-stacked { 
-  /* border: 1px solid red; */ 
   overflow: hidden; 
 }
-.panel-3col-33-stacked div div { 
-  margin: .5em;
-}
+
 .panel-3col-33-stacked .panel-col-top,
 .panel-3col-33-stacked .panel-col-bottom { 
   width: 100%; 
   clear: both;
 }
+
+.panel-3col-33-stacked .panel-col-top .inside {
+  margin-bottom: .5em;
+}
+
 .panel-3col-33-stacked .panel-col-first { 
   float: left; 
   width: 33%; 
 }
+
+.panel-3col-33-stacked .panel-col .inside { 
+  margin: 0 .5em 1em .5em;
+}
+
 .panel-3col-33-stacked .panel-col { 
   float: left; 
   width: 34%; 
 }
+
+.panel-3col-33-stacked .panel-col .inside { 
+  margin: 0 .5em 1em .5em;
+}
+
 .panel-3col-33-stacked .panel-col-last { 
   float: left; 
   width: 33%; 
 }
+
+.panel-3col-33-stacked .panel-col-last .inside { 
+  margin: 0 0 1em .5em;
+}
+
+.panel-3col-33-stacked .panel-separator {
+  margin: 0 0 1em 0;
+}
+
 .panel-clearer {
   clear: both;
 }
