--- a/layouts/twocol.css
+++ b/layouts/twocol.css
@@ -1,22 +1,36 @@
-/* $Id: twocol.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
+/* $Id: twocol.css,v 1.4.6.1 2007/05/22 22:08:01 merlinofchaos Exp $ */
 
 .panel-2col { 
-  /* border: 1px solid red; */ 
   overflow: hidden; 
-}
-
-.panel-2col div div { 
-  margin: .5em;
 }
 
 .panel-2col .panel-col-first { 
   float: left; 
   width: 50%; 
 }
+
+.panel-2col .panel-col-first .inside { 
+  margin: 0 .5em 1em 0;
+}
+
 .panel-2col .panel-col-last { 
   float: left; 
   width: 50%; 
 }
+
+.panel-2col .panel-col-last .inside { 
+  margin: 0 0 1em .5em;
+}
+
+#panels-edit-display .panel-pane,
+#panels-edit-display .helperclass {
+  margin: .5em;
+}
+
+.panel-2col .panel-separator {
+  margin: 0 0 1em 0;
+}
+
 .panel-clearer {
   clear: both;
 }
