--- a/layouts/twocol_stacked.css
+++ b/layouts/twocol_stacked.css
@@ -1,27 +1,43 @@
-/* $Id: twocol_stacked.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
+/* $Id: twocol_stacked.css,v 1.4.6.1 2007/05/22 22:08:01 merlinofchaos Exp $ */
 
 .panel-2col-stacked { 
-  /* border: 1px solid red; */ 
   overflow: hidden; 
-}
-
-.panel-2col-stacked div div { 
-  margin: .5em;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 .panel-2col-stacked .panel-col-top,
 .panel-2col-stacked .panel-col-bottom { 
-  width: 100%; 
+  width: 99.9%; 
   clear: both;
 }
+
+.panel-2col-stacked .panel-col-top .inside {
+  margin-bottom: .5em;
+}
+
 .panel-2col-stacked .panel-col-first { 
   float: left; 
   width: 50%; 
 }
+
+.panel-2col-stacked .panel-col-first .inside { 
+  margin: 0 .5em 1em 0;
+}
+
 .panel-2col-stacked .panel-col-last { 
   float: left; 
   width: 50%; 
 }
+
+.panel-2col-stacked .panel-col-last .inside { 
+  margin: 0 0 1em .5em;
+}
+
+.panel-2col-stacked .panel-separator {
+  margin: 0 0 1em 0;
+}
+
 .panel-clearer {
   clear: both;
 }
