--- a/layouts/onecol.css
+++ b/layouts/onecol.css
@@ -1,7 +1,7 @@
-/* $Id: onecol.css,v 1.1.2.2 2007/08/24 02:49:06 merlinofchaos Exp $ */
+/* $Id: onecol.css,v 1.1.2.3 2007/12/11 21:02:35 merlinofchaos Exp $ */
 
 .panel-1col { 
-  overflow: hidden; 
+/*  overflow: hidden;  */
 }
 
 .panel-2col .panel-col-first .inside { 
