--- a/layouts/threecol_25_50_25.css
+++ b/layouts/threecol_25_50_25.css
@@ -1,7 +1,7 @@
-// $Id: threecol_25_50_25.css,v 1.3.6.3 2007/11/27 17:43:33 merlinofchaos Exp $
+// $Id: threecol_25_50_25.css,v 1.3.6.4 2007/12/11 21:02:35 merlinofchaos Exp $
 
 .panel-3col { 
-  overflow: hidden; 
+/*  overflow: hidden;  */
 }
 
 .panel-3col .panel-col-first { 
