--- a/layouts/threecol_33_34_33.css
+++ b/layouts/threecol_33_34_33.css
@@ -1,6 +1,6 @@
-// $Id: threecol_33_34_33.css,v 1.4.6.3 2007/11/27 17:43:33 merlinofchaos Exp $
+// $Id: threecol_33_34_33.css,v 1.4.6.4 2007/12/11 21:02:35 merlinofchaos Exp $
 .panel-3col-33 { 
-  overflow: hidden; 
+/*  overflow: hidden;  */
 }
 
 .panel-3col-33 .panel-col-first { 
