--- a/layouts/threecol_33_34_33_stacked.css
+++ b/layouts/threecol_33_34_33_stacked.css
@@ -1,7 +1,7 @@
-/* $Id: threecol_33_34_33_stacked.css,v 1.4.6.4 2007/11/27 17:43:33 merlinofchaos Exp $ */
+/* $Id: threecol_33_34_33_stacked.css,v 1.4.6.5 2007/12/11 21:02:35 merlinofchaos Exp $ */
 
 .panel-3col-33-stacked { 
-  overflow: hidden; 
+/*  overflow: hidden;  */
 }
 
 .panel-3col-33-stacked .panel-col-top,
