--- a/layouts/twocol.css
+++ b/layouts/twocol.css
@@ -1,7 +1,7 @@
-/* $Id: twocol.css,v 1.4.6.3 2007/11/27 17:43:33 merlinofchaos Exp $ */
+/* $Id: twocol.css,v 1.4.6.4 2007/12/11 21:02:35 merlinofchaos Exp $ */
 
 .panel-2col { 
-  overflow: hidden; 
+/*  overflow: hidden;  */
 }
 
 .panel-2col .panel-col-first { 
