--- a/layouts/twocol_bricks.css
+++ b/layouts/twocol_bricks.css
@@ -1,4 +1,4 @@
-/* $Id: twocol_bricks.css,v 1.1.2.2 2007/12/11 21:02:35 merlinofchaos Exp $ */
+/* $Id: twocol_bricks.css,v 1.1.2.3 2008/05/19 03:23:28 sdboyer Exp $ */
 
 .panel-2col-bricks { 
 /*  overflow: hidden;  */
@@ -22,6 +22,9 @@
   float: left; 
   width: 50%; 
 }
+* html .panel-2col-bricks .panel-col-first {
+  width: 49.9%;
+}
 
 .panel-2col-bricks .panel-col-first .inside { 
   margin: 0 .5em .5em 0;
@@ -30,6 +33,9 @@
 .panel-2col-bricks .panel-col-last { 
   float: left; 
   width: 50%; 
+}
+* html .panel-2col-bricks .panel-col-last {
+  width: 49.9%;
 }
 
 .panel-2col-bricks .panel-col-last .inside { 
