--- a/css/panels_admin.css
+++ b/css/panels_admin.css
@@ -1,4 +1,4 @@
-/* $Id: panels_admin.css,v 1.2 2008/07/16 00:09:03 merlinofchaos Exp $ */
+/* $Id: panels_admin.css,v 1.3 2008/07/31 00:05:44 merlinofchaos Exp $ */
 
 .layout-link {
   float: left; 
@@ -134,4 +134,9 @@ tr.changed td {
 tr.changed td span.star {
   font-weight: bold;
   color: #E09010;
+}
+
+td select {
+  margin: 0;
+  padding: 0;
 }
