--- a/layouts/twocol.css
+++ b/layouts/twocol.css
@@ -1,4 +1,4 @@
-/* $Id: twocol.css,v 1.4.6.4 2007/12/11 21:02:35 merlinofchaos Exp $ */
+/* $Id: twocol.css,v 1.4.6.5 2008/09/03 03:43:34 sdboyer Exp $ */
 
 .panel-2col { 
 /*  overflow: hidden;  */
@@ -6,7 +6,7 @@
 
 .panel-2col .panel-col-first { 
   float: left; 
-  width: 50%; 
+  width: 49.9%; 
 }
 
 .panel-2col .panel-col-first .inside { 
@@ -15,7 +15,7 @@
 
 .panel-2col .panel-col-last { 
   float: left; 
-  width: 50%; 
+  width: 49.9%; 
 }
 
 .panel-2col .panel-col-last .inside { 
