--- a/css/panels_dnd.css
+++ b/css/panels_dnd.css
@@ -1,4 +1,4 @@
-/* $Id: panels_dnd.css,v 1.1.2.27 2008/07/11 03:53:20 sdboyer Exp $ */
+/* $Id: panels_dnd.css,v 1.1.2.28 2008/10/05 23:17:42 sdboyer Exp $ */
 
 #panels-dnd-main {
   margin: 0.5em 0;
@@ -155,6 +155,7 @@ div.panels-display .pane-add {
   margin: 2px;
   border: 1px solid #000;
   width: 600px;
+  text-align: left;
 } 
 
 .panels-modal-content .modal-title {
