--- a/plugins/layouts/flexible/flexible.css
+++ b/plugins/layouts/flexible/flexible.css
@@ -1,4 +1,4 @@
-/* $Id: flexible.css,v 1.1.2.1 2008/12/16 21:27:58 merlinofchaos Exp $ */
+/* $Id: flexible.css,v 1.1.2.2 2009/03/24 18:32:19 merlinofchaos Exp $ */
 
 .panel-flexible { 
 /*  overflow: hidden;  */
@@ -55,4 +55,49 @@ div.panel-flexible div.panel-flexible-sidebars div.panel-sidebar {
 
 div.panel-flexible div.panel-flexible-sidebars div.panel-sidebar-middle { 
   width: 100%; 
+}
+
+/* ---- */
+
+.panel-flexible {
+  width: 99.9%;
+}
+
+.panels-flexible-region { 
+  float: left; 
+  padding: 0;
+  /* margin: 1px 0 .5em 0; */
+}
+
+.panels-flexible-row {
+  padding: 0;
+  margin: 0;
+  padding-bottom: .5em;
+  width: 99.9%;
+}
+
+.panels-flexible-row-last {
+  padding-bottom: 0;
+}
+
+.panels-flexible-region .inside { 
+  padding-right: .5em;
+  padding-left: .5em;
+}
+
+.panesl-flexible-region-first .inside { 
+  padding-left: 0;
+}
+
+.panels-flexible-region-last .inside { 
+  padding-right: 0;
+}
+
+#panels-edit-display .panel-pane,
+#panels-edit-display .helperclass {
+  margin: .5em;
+}
+
+.panel-flexible .panel-separator {
+  margin: 0 0 1em 0;
 }
