--- a/plugins/layouts/flexible/flexible-admin.css
+++ b/plugins/layouts/flexible/flexible-admin.css
@@ -1,4 +1,4 @@
-/* $Id: flexible-admin.css,v 1.1.2.1 2009/03/24 18:32:19 merlinofchaos Exp $ */
+/* $Id: flexible-admin.css,v 1.1.2.2 2009/03/26 17:29:26 merlinofchaos Exp $ */
 
 div.panel-flexible-edit-layout .pane-add-link,
 .panel-flexible-edit-layout .panel-pane {
@@ -12,6 +12,10 @@ div.panel-flexible-edit-layout .pane-add-link,
 .panel-flexible-edit-layout .panels-flexible-column-inside {
   margin: 5px;
   border: 1px dotted green;
+}
+
+.panels-flexible-column-inside {
+  overflow: hidden;
 }
 
 .panel-flexible-edit-layout .panels-flexible-column > .flexible-title {
