--- a/css/panels-dashboard.css
+++ b/css/panels-dashboard.css
@@ -1,11 +1,10 @@
-/* $Id: panels-dashboard.css,v 1.1.2.1 2009/04/30 17:37:27 merlinofchaos Exp $ */
+/* $Id: panels-dashboard.css,v 1.1.2.2 2009/07/10 03:03:35 merlinofchaos Exp $ */
 
 .dashboard-entry .dashboard-icon {
   float: left;
   width: 50px;
   height: 50px;
   text-align: center;
-  border: 1px solid red;
   vertical-align: middle;
   margin: 0 5px;
 }
@@ -26,10 +25,6 @@
 
 .dashboard-entry {
   padding-left: 1em;
-}
-
-.dashboard-text {
-  margin-left: 70px;
 }
 
 .dashboard-entry .dashboard-link form {
@@ -54,11 +49,23 @@
   width: 47%;
   float: left;
   height: 35em;
-  border: 1px solid #ccc;
 }
 
 .dashboard-question {
   margin-top: 14em;
   padding: 1em;
   text-align: center;
+}
+
+table.panels-manage {
+  margin: 0 1em 1em 1em;
+  width: 100%;
+}
+
+.dashboard-pages .links {
+  text-align: right;
+}
+
+.dashboard-pages .page-manager-page-operations {
+  text-align: right;
 }
