--- a/plugins/layouts/flexible/flexible-admin.css
+++ b/plugins/layouts/flexible/flexible-admin.css
@@ -1,4 +1,4 @@
-/* $Id: flexible-admin.css,v 1.1.2.3 2009/04/18 02:01:57 merlinofchaos Exp $ */
+/* $Id: flexible-admin.css,v 1.1.2.4 2009/07/13 21:06:58 merlinofchaos Exp $ */
 
 div.panel-flexible-edit-layout .pane-add-link,
 .panel-flexible-edit-layout .panel-pane {
@@ -15,7 +15,7 @@ div.panel-flexible-edit-layout .pane-add-link,
 }
 
 .panels-flexible-column-inside {
-  overflow: hidden;
+/*  overflow: hidden; */
 }
 
 .panel-flexible-edit-layout .panels-flexible-column > .flexible-title {
