--- a/plugins/layouts/flexible/flexible-admin.css
+++ b/plugins/layouts/flexible/flexible-admin.css
@@ -1,6 +1,6 @@
-/* $Id: flexible-admin.css,v 1.1.2.4 2009/07/13 21:06:58 merlinofchaos Exp $ */
+/* $Id: flexible-admin.css,v 1.1.2.5 2009/07/22 00:15:50 merlinofchaos Exp $ */
 
-div.panel-flexible-edit-layout .pane-add-link,
+#panels-dnd-main .panel-flexible-edit-layout div.panels-display .pane-add-link,
 .panel-flexible-edit-layout .panel-pane {
   display: none;
 }
@@ -40,10 +40,6 @@ div.panel-flexible-edit-layout .pane-add-link,
   width: 5em;
   margin-left: auto;
   margin-right: auto;
-}
-
-#panels-flexible-toggle-layout {
-  text-align: right;
 }
 
 .panel-flexible-no-edit-layout .panels-flexible-splitter {
