--- a/plugins/layouts/flexible/flexible-admin.css
+++ b/plugins/layouts/flexible/flexible-admin.css
@@ -1,4 +1,4 @@
-/* $Id: flexible-admin.css,v 1.1.2.5 2009/07/22 00:15:50 merlinofchaos Exp $ */
+/* $Id: flexible-admin.css,v 1.1.2.6 2010/06/22 23:10:02 merlinofchaos Exp $ */
 
 #panels-dnd-main .panel-flexible-edit-layout div.panels-display .pane-add-link,
 .panel-flexible-edit-layout .panel-pane {
@@ -80,4 +80,8 @@
   line-height: 2em;
 }
 
+#panels-edit-display .panel-pane,
+#panels-edit-display .helperclass {
+  margin: .5em;
 }
+
