--- a/plugins/layouts/flexible/flexible-admin.css
+++ b/plugins/layouts/flexible/flexible-admin.css
@@ -1,4 +1,4 @@
-/* $Id: flexible-admin.css,v 1.1.2.6 2010/06/22 23:10:02 merlinofchaos Exp $ */
+/* $Id: flexible-admin.css,v 1.1.2.7 2010/06/23 04:17:42 merlinofchaos Exp $ */
 
 #panels-dnd-main .panel-flexible-edit-layout div.panels-display .pane-add-link,
 .panel-flexible-edit-layout .panel-pane {
@@ -10,7 +10,7 @@
 }
 
 .panel-flexible-edit-layout .panels-flexible-column-inside {
-  margin: 5px;
+/*  margin: 5px; */
   border: 1px dotted green;
 }
 
