--- a/css/panels_dnd.css
+++ b/css/panels_dnd.css
@@ -1,4 +1,4 @@
-/* $Id: panels_dnd.css,v 1.3.2.12 2009/10/21 21:02:24 merlinofchaos Exp $ */
+/* $Id: panels_dnd.css,v 1.3.2.13 2010/07/03 01:24:55 merlinofchaos Exp $ */
 
 #panels-dnd-main {
   margin: 0.5em 0;
@@ -499,7 +499,9 @@ html.js div.panels-display-links div.ctools-dropdown-container {
   -moz-border-radius: 0.333em;
   -webkit-box-shadow: 0.333em 0.333em 0.333em rgba(0, 0, 0, 0.25);
   font-size: 0.9em;
+  font-weight: bold;
 }
+
 html.js #panels-dnd-main div.ctools-dropdown div.ctools-dropdown-container ul li,
 html.js div.panels-display-links div.ctools-dropdown-container ul li {
 
