Fixes to display editor when inside Panels Everywhere.

--- a/css/panels_dnd.css
+++ b/css/panels_dnd.css
@@ -1,4 +1,4 @@
-/* $Id: panels_dnd.css,v 1.3.2.14 2010/07/20 21:24:46 merlinofchaos Exp $ */
+/* $Id: panels_dnd.css,v 1.3.2.15 2010/07/22 18:59:02 merlinofchaos Exp $ */
 
 #panels-dnd-main {
   margin: 0.5em 0;
@@ -440,7 +440,7 @@ a.close img {
 }
 
 
-div.panel-pane div.ctools-dropdown-container-wrapper {
+#panels-dnd-main div.panel-pane div.ctools-dropdown-container-wrapper {
   margin-left: -158px;
   margin-top: -4px;
 }
@@ -459,22 +459,22 @@ html.js div.panels-display-links div.ctools-dropdown-container ul li a {
 }
 */
 
-.panel-pane .pane-title {
+#panels-dnd-main .panel-pane .pane-title {
   padding: 0.25em 0.5em;
 }
-.panel-pane .pane-title:after {
+#panels-dnd-main .panel-pane .pane-title:after {
   font-size: 0.8em;
   color: crimson;
   letter-spacing: normal;
   display: block;
 }
-.panel-pane.hidden-pane .pane-title:after {
+#panels-dnd-main .panel-pane.hidden-pane .pane-title:after {
   content: " status: hidden";
 }
-.panel-pane.changed .pane-title:after {
+#panels-dnd-main .panel-pane.changed .pane-title:after {
   content: " status: changes not saved";
 }
-.panel-pane.hidden-pane.changed .pane-title:after {
+#panels-dnd-main .panel-pane.hidden-pane.changed .pane-title:after {
   content: " status: hidden & changed";
 }
 
