--- a/css/panels_dnd.css
+++ b/css/panels_dnd.css
@@ -1,4 +1,4 @@
-/* $Id: panels_dnd.css,v 1.5 2010/09/07 09:42:11 sdboyer Exp $ */
+/* $Id: panels_dnd.css,v 1.6 2010/10/11 22:56:03 sdboyer Exp $ */
 
 #panels-dnd-main {
   margin: 0.5em 0;
@@ -30,7 +30,7 @@
 }
 
 #panels-dnd-main div.panels-display .pane-add-link {
-  position: absolute;
+  position: relative;
   display: block;
   width: 16px;
   height: 16px;
